--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     display: table;
                     margin-left: auto;
                     margin-right: auto;  
+                    letter-spacing: 20px;
                }
                #clock {
                     display: flex;
@@ -40,7 +41,7 @@
           <div id="time-panel">
                <canvas id="canvas"></canvas>
                <span id="clock">
-                    <span id="hour"></span>
+                    <span id="hour" style="padding-left: 14px"></span>
                     <span id="min"></span>
                     <span id="sec"></span>
                </span>
@@ -80,8 +81,7 @@
                          var barWidth = Math.round(1.0 / 128.0 * audioCanvas.width);
                          var halfCount = audioArray.length / 2;
                     }
-                    // Begin with the left channel in red
-                    audioCanvasCtx.fillStyle = 'rgb(255,0,0)';
+                    audioCanvasCtx.fillStyle = sessionStorage.getItem("audio-color");
                     // Iterate over the first 64 array elements (0 - 63) for the left channel audio data
                     for (var i = 0; i < halfCount; i += parseInt(sessionStorage.getItem("bar-amount"))) {
                          // Create an audio bar with its hight depending on the audio volume level of the current frequency
@@ -89,8 +89,7 @@
                          audioCanvasCtx.fillRect(barWidth * i, audioCanvas.height - height * sessionStorage.getItem("bar-distortion"), barWidth, height);
                     }
 
-                    // Now draw the right channel in blue
-                    audioCanvasCtx.fillStyle = 'rgb(0,0,255)';
+                    audioCanvasCtx.fillStyle =  sessionStorage.getItem("audio-color");;
                     // Iterate over the last 64 array elements (64 - 127) for the right channel audio data
                     for (var i = halfCount; i < audioArray.length; i += parseInt(sessionStorage.getItem("bar-amount"))) {
                          // Create an audio bar with its hight depending on the audio volume level
@@ -117,7 +116,7 @@
 
                          // Finally draw the image data from the temp canvas.
                          audioCanvasCtx.translate(audioCanvas.height / 45, -audioCanvas.width / 16);
-                         audioCanvasCtx.drawImage(offScreen, 0, 0, audioCanvas.width, audioCanvas.height * 1.9);
+                         audioCanvasCtx.drawImage(offScreen, 0, 0, audioCanvas.width, audioCanvas.height * 1.88);
                          audioCanvasCtx.restore();
                     }
 
